# Orion

./: .gitignore  README.md  main.py  pyproject.toml  voice_chat.py
src/: pipeline.py
src/llm/: llm.py
src/memory/: memory.py
src/stt/: stt.py
src/tools/: weather.py  web_search.py
src/tts/: tts.py
