[project]
name = "voiceagent"
version = "0.1.0"
description = "Dependencies for launching voice agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "omnivoice>=0.1.5",
    "pyaudio",
    "realtimestt[faster-whisper]",
    "sounddevice",
    "torch==2.5.1",
    "torchaudio==2.5.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true