[project]
name = "voiceagent"
version = "0.1.0"
description = "Libraries for Orion voice agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=7.4.0",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "pipecat-ai[daily,elevenlabs,mem0,perplexity,runner,webrtc]>=1.5.0",
    "uvicorn>=0.50.2",
]
